@@ -58,7 +58,7 @@
   </tr>
 
   <tr>
-    <td><p align="center"><img src="@IMAGES@gentoo.jpeg"></p></td>
+    <td><p align="center"><img src="@IMAGES@gentoo-logo.png"></p></td>
     <td>
       Gentoo
     </td>
@@ -76,7 +76,7 @@
   </tr>
 
   <tr>
-    <td><p align="center"><img src="@IMAGES@mandrake-logo.jpeg"></p></td>
+    <td><p align="center"><img src="@IMAGES@mandrake-logo.png"></p></td>
     <td>
       Mandrake
     </td>
