@@ -82,7 +82,7 @@
 
     
     <tr>
-      <td><p align="center"><img src="@IMAGES@mandrake-logo.jpeg"></p></td>
+      <td><p align="center"><img src="@IMAGES@mandrake-logo.png"></p></td>
       <td>
 	Mandrake
       </td>
@@ -138,7 +138,7 @@
 
     
     <tr>
-      <td><p align="center"><img src="@IMAGES@gentoo.jpeg"></p></td>
+      <td><p align="center"><img src="@IMAGES@gentoo-logo.png"></p></td>
       <td>
 	Gentoo
       </td>
@@ -173,7 +173,7 @@
     </tr>
     
     <tr>
-      <td><p align="center"><img src="@IMAGES@macosx.jpeg"></p></td>
+      <td><p align="center"><img src="@IMAGES@macosx-logo.png"></p></td>
       <td>
 	MacOS X/Fink
       </td>
@@ -207,7 +207,7 @@
     </tr>
 
     <tr>
-      <td><img src="@IMAGES@netbsd.jpeg" alt="NetBSD flag"></td>
+      <td><img src="@IMAGES@netbsd-logo.png" alt="NetBSD flag"></td>
       <td>NetBSD</td>
       <td>1.6</td>
       <td>
@@ -286,7 +286,7 @@
     </tr>
     
     <tr>
-      <td><p align="center"><img src="@IMAGES@mandrake-logo.jpeg"></p></td>
+      <td><p align="center"><img src="@IMAGES@mandrake-logo.png"></p></td>
       <td>
 	Mandrake
       </td>
@@ -345,7 +345,7 @@
     </tr>
 
     <tr>
-      <td><p align="center"><img src="@IMAGES@macosx.jpeg"></p></td>
+      <td><p align="center"><img src="@IMAGES@macosx-logo.png"></p></td>
       <td>
 	MacOS X/Fink
       </td>
@@ -459,7 +459,7 @@
     
     
     <tr>
-      <td><p align="center"><img src="@IMAGES@mandrake-logo.jpeg"></p></td>
+      <td><p align="center"><img src="@IMAGES@mandrake-logo.png"></p></td>
       <td>
 	Mandrake
       </td>
@@ -518,7 +518,7 @@
     </tr>
 
     <tr>
-      <td><p align="center"><img src="@IMAGES@macosx.jpeg"></p></td>
+      <td><p align="center"><img src="@IMAGES@macosx-logo.png"></p></td>
       <td>
 	MacOS X/Fink
       </td>
